--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,9 +35,6 @@
         
     </div>
 
-        {# <div class="container-fluid p-0" style="position:absolute; bottom:0">
-
-        </div> #}
 
 </header>
     
@@ -79,14 +76,15 @@
         <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Scream.jpg')}} alt=""></a>
     </div>
 
-
+{% block body %}
+{% endblock %}
 
 <footer class="bg-dark">
 
     <div class="d-flex justify-content-around">
 
-        <a class="text-danger" href="#">Contact</a>
-        <a class="text-danger" href="#">Qui sommes-nous ?</a>
+        <a class="text-danger" href="#"> Contact </a>
+        <a class="text-danger" href="#"> Qui sommes-nous ? </a>
 
     </div>
 
